--- a/tag.hbs
+++ b/tag.hbs
@@ -4,6 +4,8 @@
 <main class="gh-main gh-outer">
 
     {{#tag}}
+    {{> "components/background-accent-color"}}
+
         <section class="gh-archive{{#if feature_image}} has-image{{/if}}{{#if @custom.show_publication_info_sidebar}} has-sidebar{{/if}} gh-inner">
             <div class="gh-archive-inner">
                 <header class="gh-archive-wrapper">
