--- a/post.hbs
+++ b/post.hbs
@@ -10,6 +10,7 @@
         <header class="gh-article-header gh-canvas">
 
             {{#if primary_tag}}
+                {{> "components/background-accent-color"}}
                 <a class="gh-article-tag" href="{{primary_tag.url}}">{{primary_tag.name}}</a>
             {{/if}}
             <h1 class="gh-article-title is-title">{{title}}</h1>
