--- a/partials/components/header-content.hbs
+++ b/partials/components/header-content.hbs
@@ -15,6 +15,11 @@
 
         {{!-- Highlight layout --}}
         {{#match headerStyle "Highlight"}}
+            {{#if @site.description}}
+                <div class="gh-subheader-description">
+                    <h1>{{@site.description}}</h1>
+                </div>
+            {{/if}}
             <div class="gh-header-left">
                 {{#foreach posts limit="1"}}
                     {{> "post-card" imageSizes="(max-width: 767px) calc(100vw - max(8vmin, 40px)), 640px"}}
