Add marquee to site description subheader.

--- a/partials/components/header-content.hbs
+++ b/partials/components/header-content.hbs
@@ -17,7 +17,7 @@
         {{#match headerStyle "Highlight"}}
             {{#if @site.description}}
                 <div class="gh-subheader-description">
-                    <h1>{{@site.description}}</h1>
+                    <marquee scrollamount="10"><h1>{{@site.description}}</h1></marquee>
                 </div>
             {{/if}}
             <div class="gh-header-left">
