Fixed link color for accent-background pages

--- a/partials/components/background-accent-color.hbs
+++ b/partials/components/background-accent-color.hbs
@@ -11,7 +11,7 @@
     {{/match}}
 
     {{#match primary_tag.accent_color "#000000"}}
-    .gh-article-meta-content, .gh-main, .gh-card-link, .gh-container-inner, .gh-footer, a, time {
+    .gh-article-meta-content, .gh-main, .gh-card-link, .gh-container-inner, .gh-footer, .gh-content a, time {
         color: var(--color-white);
     }
     {{/match}}
