Fixed link color for accent-background tag pages

--- a/partials/components/background-accent-color.hbs
+++ b/partials/components/background-accent-color.hbs
@@ -5,7 +5,7 @@
         background-color: {{#is "tag"}}{{accent_color}}{{else}}{{primary_tag.accent_color}}{{/is}};
     }
     {{#match accent_color "#000000"}}
-    .gh-main, .gh-card-link, .gh-footer {
+    .gh-main, .gh-card-link, .gh-card-meta, .gh-footer {
         color: var(--color-white);
     }
     {{/match}}
