--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -998,6 +998,22 @@ Search                         LOGO                    Login Subscribe
     overflow: hidden;
 }
 
+.ml7 {
+  position: relative;
+}
+.ml7 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+.ml7 .letter {
+  transform-origin: 0 100%;
+  display: inline-block;
+}
+
 /* 8.1. Magazine layout */
 
 .gh-header.is-magazine .gh-header-inner {
