Make all text white on black accent pages

--- a/partials/components/background-accent-color.hbs
+++ b/partials/components/background-accent-color.hbs
@@ -5,7 +5,7 @@
         background-color: {{#is "tag"}}{{accent_color}}{{else}}{{primary_tag.accent_color}}{{/is}};
     }
     {{#match accent_color "#000000"}}
-    .gh-main, .gh-card-link, .gh-footer {
+    .gh-article-meta-content, .gh-main, .gh-article-meta, .gh-card-link, .gh-container-inner, .gh-footer, .gh-content, a, time {
         color: var(--color-white);
     }
     {{/match}}
