Add copyright to footer

--- a/partials/components/footer.hbs
+++ b/partials/components/footer.hbs
@@ -12,6 +12,9 @@
             <nav class="gh-footer-menu">
                 {{navigation type="secondary"}}
             </nav>
+            <div class="gh-footer-copyright">
+                    &copy;<script>document.write(new Date().getFullYear());</script> slow⋅tech studio
+            </div>
         </div>
 
         {{#if @site.members_enabled}}
