Make footer subscription input form white on pages with black backgrounds

--- a/partials/components/background-accent-color.hbs
+++ b/partials/components/background-accent-color.hbs
@@ -8,11 +8,17 @@
     .gh-article-meta-content, .gh-main, .gh-article-meta, .gh-card-link, .gh-container-inner, .gh-footer, .gh-content, a, time {
         color: var(--color-white);
     }
+    .gh-form-input {
+        background-color: var(--color-white);
+    }
     {{/match}}
 
     {{#match primary_tag.accent_color "#000000"}}
     .gh-article-meta-content, .gh-main, .gh-article-meta, .gh-card-link, .gh-container-inner, .gh-footer, .gh-content, a, time {
         color: var(--color-white);
+    }
+    .gh-form-input {
+        background-color: var(--color-white);
     }
     {{/match}}
 
