--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3364,10 +3364,10 @@ body[class*=" gh-font-heading"]:not(.gh-font-heading-fira-sans):not(.gh-font-hea
 .gh-container.is-staff {
     display: flex;
     margin: auto;
-    width: 100%;
 }
 
 .gh-card-wrapper.is-staff {
     flex: 1;
-    width: 33.33%;
+    margin: auto;
+    width: 50%;
 }
