--- a/staff.hbs
+++ b/staff.hbs
@@ -1,39 +1,36 @@
 {{!< default}}
 {{!-- The tag above means: insert everything in this file into the body of the default.hbs template --}}
 
-<main class="gh-main gh-outer">
-    <section class="gh-archive{{#if @custom.show_publication_info_sidebar}} has-sidebar{{/if}} gh-inner">
-            <article class="gh-article">
-                <header class="gh-article-header gh-canvas">
-                    <h1 class="gh-article-title is-title">Our People</h1>
-                </header>
-
-                <section class="gh-canvas is-body">
-                    <div class="gh-container is-staff">
-                        {{#get "authors"}}
-                            {{! Loop through authors }}
-                            {{#foreach authors}}
-                                <table class="gh-card-wrapper is-staff">
-                                    <tbody>
-                                        <tr>
-                                            <td style="border: none"><a href="{{url}}"><img src="{{profile_image}}" width="300" height="300"></a></td>
-                                        </tr>
-                                        <tr>
-                                            <td style="border: none">
-                                                <h2><a href="{{url}}">{{name}}</a></h3>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td style="min-width: 300px">
-                                                <p>{{bio}}</p>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            {{/foreach}}
-                        {{/get}}
-                    </div>
-                </section>
-            </article>
-    </section>
+<main class="gh-main">
+    <article class="gh-article">
+        <header class="gh-article-header gh-canvas">
+            <h1 class="gh-article-title is-title">Our People</h1>
+        </header>
+        <section class="gh-canvas is-body">
+            <div class="gh-container is-staff">
+                {{#get "authors"}}
+                    {{! Loop through authors }}
+                    {{#foreach authors}}
+                        <table class="gh-card-wrapper is-staff">
+                            <tbody>
+                                <tr>
+                                    <td style="border: none"><a href="{{url}}"><img src="{{profile_image}}" width="300" height="300"></a></td>
+                                </tr>
+                                <tr>
+                                    <td style="border: none">
+                                        <h2><a href="{{url}}">{{name}}</a></h3>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="min-width: 300px">
+                                        <p>{{bio}}</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    {{/foreach}}
+                {{/get}}
+            </div>
+        </section>
+    </article>
 </main>
