Tweaked staff table sizing to display profiles side-by-side properly

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3361,6 +3361,20 @@ body[class*=" gh-font-heading"]:not(.gh-font-heading-fira-sans):not(.gh-font-hea
 
 /* 23.1 Staff */
 
+.is-staff {
+    vertical-align: top;
+}
+
+.is-staff table {
+    padding: 5px;
+}
+
+.is-staff table th td tr {
+    border: none;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .gh-container.is-staff {
     display: flex;
     margin: auto;
@@ -3370,6 +3384,20 @@ body[class*=" gh-font-heading"]:not(.gh-font-heading-fira-sans):not(.gh-font-hea
     flex: 1;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0;
+    min-height: 600px;
     width: 50%;
+}
+
+.is-staff.name {
+    height: 31px;
+}
+
+.is-staff.bio td {
+    vertical-align: top;
+    width: 360px;
+    height: 360px;
+}
+
+.is-staff.bio tr {
+    min-height: 200px;
 }
